# hapi-rs

./: .versionrc.json  CHANGELOG.md  Cargo.toml  README.md  README.tpl  package.json
.github/workflows/: bump.yml  publish.yml  release.yml
.utils/: cargo-updater.js  common.js
docs/: CONTRIBUTING.md
happi/: CHANGELOG.md  Cargo.toml  README.md
happi-derive/: .versionrc.json  CHANGELOG.md  Cargo.toml  README.md  package.json
happi-derive/src/: lib.rs
happi/src/: api.rs  client.rs  hyper.rs  lib.rs
src/: lib.rs
