[package]
name = "hapi"
version = "0.0.0"
description = "Automatic & type-safe API clients - provide the interface and i will happily do the rest :)"

edition = "2018"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cakekindel/hapi-rs"
repository = "https://github.com/cakekindel/hapi-rs"
readme = "README.md"

keywords = ["web", "client", "http", "impl"]
categories = ["api-bindings", "web-programming", "accessibility"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
