[package]
name = "happi-derive"
version = "0.0.3"
description = "Derive macros for `happi`"

edition = "2018"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cakekindel/happi-rs"
repository = "https://github.com/cakekindel/happi-rs"
readme = "README.md"

keywords = ["web", "client", "http", "impl"]
categories = ["api-bindings", "web-programming", "accessibility"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
