[package]
name = "happi-derive"
version = "0.0.6"
description = "Derive macros for `happi`"
edition = "2018"
authors = [ "Orion Kindel <cakekindel@gmail.com>" ]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cakekindel/happi-rs"
repository = "https://github.com/cakekindel/happi-rs"
readme = "README.md"
keywords = [ "web", "client", "http", "impl" ]
categories = [ "api-bindings", "web-programming", "accessibility" ]

[badges.maintenance]
status = "actively-developed"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "1"
proc-macro2 = "1.0.27"
quote = "1"

[dev-dependencies]
hyper = {version = "0.14.9", features = ["client", "tcp", "http1", "http2"]}
