[package]
name = "happi"
version = "0.0.5"
description = "Automatic & type-safe API clients - provide the interface and i will happily do the rest :)"
edition = "2018"
authors = [ "Orion Kindel <cakekindel@gmail.com>" ]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cakekindel/happi-rs"
repository = "https://github.com/cakekindel/happi-rs"
readme = "README.md"
keywords = [ "web", "client", "http", "impl" ]
categories = [ "api-bindings", "web-programming", "accessibility" ]

[badges.maintenance]
status = "actively-developed"

[dependencies.happi-derive]
path = "../happi-derive"
version = ">=0"

[dependencies]
futures = {version = "0.3", features = ["executor"]}
hyper = {version = "0.14.9", features = ["client", "tcp", "http1", "http2"]}
serde_json = "1"

[dev-dependencies]
mockito = "0.30"
tokio-test = "0.4"
